# regex_search

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  conanfile.txt
cmake/: regex_search-config.cmake.in
include/: regex_searcher.hpp
src/: main.cpp  regex_searcher.cpp
test/: regex_searcher_test.cpp  sample.txt
